Add simple test, installation guide and update subdomain

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,8 +126,8 @@ jobs:
           4. Test the proxy functionality
           
           ## Support
-          - Email: support@filmkhabar.space
-          - Website: https://filmkhabar.space
+          - Email: support@ayrop.com
+          - Website: https://ayrop.com
         draft: false
         prerelease: false
     
