--- a/.htaccess
+++ b/.htaccess
@@ -129,4 +129,135 @@ AddDefaultCharset UTF-8
 <IfModule mod_reqtimeout.c>
     RequestReadTimeout header=20-40,MinRate=500
     RequestReadTimeout body=20,MinRate=500
-</IfModule> 
+</IfModule>
+
+# تنظیمات Apache برای پروکسی ویدیو
+# Apache settings for video proxy
+
+# فعال‌سازی mod_rewrite
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    
+    # تنظیم base directory
+    RewriteBase /
+    
+    # تبدیل URL های پروکسی
+    # تبدیل: /proxy.php/path/to/file.mp4 به /proxy.php?path=/path/to/file.mp4
+    RewriteRule ^proxy\.php/(.*)$ proxy.php?path=$1 [L,QSA]
+    
+    # اگر فایل یا دایرکتوری وجود ندارد، به proxy.php هدایت کن
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^proxy\.php$ proxy.php [L]
+</IfModule>
+
+# تنظیمات CORS
+<IfModule mod_headers.c>
+    # اجازه دسترسی از همه دامنه‌ها
+    Header always set Access-Control-Allow-Origin "*"
+    
+    # متدهای مجاز
+    Header always set Access-Control-Allow-Methods "GET, HEAD, OPTIONS"
+    
+    # هدرهای مجاز
+    Header always set Access-Control-Allow-Headers "Range, If-Range, If-Modified-Since, If-None-Match, Accept, Accept-Encoding, User-Agent, Referer"
+    
+    # حداکثر زمان کش
+    Header always set Access-Control-Max-Age "86400"
+    
+    # پاسخ به درخواست‌های OPTIONS
+    RewriteEngine On
+    RewriteCond %{REQUEST_METHOD} OPTIONS
+    RewriteRule ^(.*)$ $1 [R=200,L]
+</IfModule>
+
+# تنظیمات امنیت
+<IfModule mod_headers.c>
+    # حذف هدرهای حساس
+    Header always unset X-Powered-By
+    Header always unset Server
+    Header always unset X-AspNet-Version
+    Header always unset X-AspNetMvc-Version
+    
+    # اضافه کردن هدرهای امنیتی
+    Header always set X-Content-Type-Options "nosniff"
+    Header always set X-Frame-Options "SAMEORIGIN"
+    Header always set X-XSS-Protection "1; mode=block"
+    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+</IfModule>
+
+# تنظیمات فایل‌های بزرگ
+<IfModule mod_php.c>
+    # افزایش محدودیت‌های PHP
+    php_value memory_limit 2G
+    php_value max_execution_time 0
+    php_value max_input_time 0
+    php_value post_max_size 10G
+    php_value upload_max_filesize 10G
+    php_value max_file_uploads 100
+    
+    # تنظیمات بافر
+    php_value output_buffering 4096
+    php_value implicit_flush On
+</IfModule>
+
+# تنظیمات کش
+<IfModule mod_expires.c>
+    ExpiresActive On
+    
+    # کش برای فایل‌های ویدیو
+    ExpiresByType video/* "access plus 1 month"
+    ExpiresByType audio/* "access plus 1 month"
+    
+    # کش برای فایل‌های متنی
+    ExpiresByType text/html "access plus 1 hour"
+    ExpiresByType text/css "access plus 1 week"
+    ExpiresByType application/javascript "access plus 1 week"
+    
+    # کش برای فایل‌های تصویری
+    ExpiresByType image/* "access plus 1 month"
+</IfModule>
+
+# تنظیمات فشرده‌سازی
+<IfModule mod_deflate.c>
+    # فعال‌سازی فشرده‌سازی
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+</IfModule>
+
+# تنظیمات خطا
+ErrorDocument 404 /proxy.php
+ErrorDocument 500 /proxy.php
+
+# تنظیمات فایل‌های خاص
+<Files "proxy_log.txt">
+    Order allow,deny
+    Deny from all
+</Files>
+
+<Files "config.php">
+    Order allow,deny
+    Deny from all
+</Files>
+
+# تنظیمات دایرکتوری
+<Directory "/">
+    # اجازه اجرای PHP
+    AddHandler application/x-httpd-php .php
+    
+    # تنظیمات امنیتی
+    Options -Indexes
+    Options -ExecCGI
+    
+    # محدودیت دسترسی
+    <Files "*.php">
+        Require all granted
+    </Files>
+</Directory> 
